IEI-368053 don't use apis marked for removal - jdk17